Free Response API changes (#265)
* Remove free response related fields and types

* Re-add end poll test

* Change poll answers and answer choices to use integers as letter identifiers

* Change PollResult letter to index for clarity

* Appease Mr. Hound
