# src/routers/v2/swagger.json
@@ -1309,31 +1309,13 @@
           "Socket: to server"
         ],
         "summary": "Answer a poll",
-        "description": "User sends this to answer a multiple choice poll or submit a FR answer",
+        "description": "User sends this to answer a poll",
         "parameters": [
           {
             "name": "submittedAnswer",
             "in": "body",
             "schema": {
-              "$ref": "#/definitions/PollChoice"
-            }
-          }
-        ]
-      }
-    },
-    "server/poll/upvote": {
-      "get": {
-        "tags": [
-          "Socket: to server"
-        ],
-        "summary": "Upvote a FR answer",
-        "description": "User sends this to upvote an answer in free response",
-        "parameters": [
-          {
-            "name": "upvotedAnswer",
-            "in": "body",
-            "schema": {
-              "$ref": "#/definitions/PollChoice"
+              "type": "integer"
             }
           }
         ]
@@ -1413,22 +1395,6 @@
         ],
         "summary": "User receives to display a poll",
         "description": "State should be “live”",
-        "responses": [
-          {
-            "name": "currentPoll",
-            "schema": {
-              "$ref": "#/definitions/Socket - ClientPoll"
-            }
-          }
-        ]
-      }
-    },
-    "user/poll/fr/live": {
-      "get": {
-        "tags": [
-          "Socket: to member"
-        ],
-        "summary": "User receives an updated poll to reflect the current changes (only FR)",
         "responses": [
           {
             "name": "currentPoll",
@@ -1568,7 +1534,7 @@
         },
         "options": {
           "type": "array",
-          "description": "Poll options, empty if FR",
+          "description": "Poll options",
           "items": {
             "type": "string"
           }
@@ -1640,20 +1606,16 @@
           },
           "example": [
             {
-              "letter": "A",
-              "text": "MC example",
+              "index": 0,
+              "text": "Example",
               "count": 5
-            },
-            {
-              "text": "FR example",
-              "count": 16
             }
           ]
         },
         "correctAnswer": {
           "type": "string",
-          "description": "Letter of correct answer choice (MC only)",
-          "example": "A"
+          "description": "Index of correct answer choice, -1 if none",
+          "example": 0
         },
         "createdAt": {
           "type": "string",
@@ -1674,15 +1636,6 @@
           "description": "Poll question",
           "example": "Which planet is a gas giant?"
         },
-        "type": {
-          "type": "string",
-          "description": "Poll type",
-          "enum": [
-            "multipleChoice",
-            "freeResponse"
-          ],
-          "example": "multipleChoice"
-        },
         "updatedAt": {
           "type": "string",
           "description": "Timestamp (Unix time)",
@@ -1690,26 +1643,15 @@
         },
         "userAnswers": {
           "type": "object",
-          "description": "Mapping of googleID to the choice the user selected if MC, or the choices the user upvoted if FR",
+          "description": "Mapping of googleID to the choice the user selected",
           "properties": {
             "googleID(string)": {
               "type": "array",
               "items": {
-                "$ref": "#/definitions/PollChoice"
+                "type": "integer"
               },
               "example": {
-                "googleID1": {
-                  "letter": "A",
-                  "text": "selected MC answer"
-                },
-                "googleID2": [
-                  {
-                    "text": "upvoted FR answer1"
-                  },
-                  {
-                    "text": "upvoted FR answer2"
-                  }
-                ]
+                "googleID1": [3]
               }
             }
           }
@@ -1727,39 +1669,18 @@
         "userAnswers"
       ]
     },
-    "PollChoice": {
-      "type": "object",
-      "properties": {
-        "letter": {
-          "type": "string",
-          "description": "Letter identifier of answer choice (MC only)",
-          "example": "A",
-          "nullable": true
-        },
-        "text": {
-          "type": "string",
-          "description": "Text of answer choice",
-          "example": "Saturn"
-        }
-      },
-      "required": [
-        "letter",
-        "text"
-      ]
-    },
     "PollResult": {
       "type": "object",
       "properties": {
         "count": {
           "type": "integer",
-          "description": "Number of times choice was selected or upvoted<br/>`Null` when user is member & poll is MC & poll is live",
+          "description": "Number of times choice was selected or upvoted<br/>`Null` when user is member & poll is live",
           "nullable": true
         },
-        "letter": {
-          "type": "string",
-          "description": "Letter identifier of answer choice (MC only)",
-          "example": "A",
-          "nullable": true
+        "index": {
+          "type": "integer",
+          "description": "Index identifier of answer choice as an integer, -1 if none",
+          "example": 2
         },
         "text": {
           "type": "string",
@@ -1769,7 +1690,7 @@
       },
       "required": [
         "count",
-        "letter",
+        "index",
         "text"
       ]
     },
@@ -1781,15 +1702,15 @@
         },
         "answerChoices": {
           "type": "array",
-          "description": "All answers for the poll; count is null if user is `member` and MC poll is `live`",
+          "description": "All answers for the poll; count is null if user is `member` and poll is `live`",
           "items": {
             "$ref": "#/definitions/PollResult"
           }
         },
         "correctAnswer": {
           "type": "string",
-          "example": "A",
-          "description": "Letter of correct answer choice (MC only)"
+          "example": 3,
+          "description": "Index of correct answer choice, -1 if none"
         },
         "createdAt": {
           "type": "string",
@@ -1809,14 +1730,6 @@
           "type": "string",
           "description": "Poll question"
         },
-        "type": {
-          "type": "string",
-          "description": "Poll type",
-          "enum": [
-            "multipleChoice",
-            "freeResponse"
-          ]
-        },
         "updatedAt": {
           "type": "string",
           "description": "Timestamp (Unix time)",
@@ -1824,26 +1737,15 @@
         },
         "userAnswers": {
           "type": "object",
-          "description": "Mapping of googleID to user answers for MC and upvotes for FR",
+          "description": "Mapping of googleID to user answers",
           "properties": {
             "googleID(string)": {
               "type": "array",
               "items": {
-                "$ref": "#/definitions/PollChoice"
+                "type": "integer"
               },
               "example": {
-                "googleID1": {
-                  "letter": "A",
-                  "text": "selected MC answer"
-                },
-                "googleID2": [
-                  {
-                    "text": "upvoted FR answer1"
-                  },
-                  {
-                    "text": "upvoted FR answer2"
-                  }
-                ]
+                "googleID1": [3]
               }
             }
           }
